# Government-information-app

./: Directory tree.txt  README.md  main.py  pyproject.toml  requirements.txt
gov_intel/: __init__.py  app_state.py  archive.py  config.py  gov_api.py  models.py  storage.py
gov_intel/ui/: __init__.py  app.py  data_grid.py  pdf_viewer.py  split_compare.py
gov_intelligence/: favorite_sources.json  favorite_topics.json  keywords.json  search_history.json
gov_intelligence/topics/blueprint_modern_digital_government/: briefing.txt  documents.json
gov_intelligence/topics/precision_bred/: briefing.txt  documents.json
tests/: test_app_state.py  test_archive.py  test_gov_api.py  test_models.py  test_storage.py
