[project]
name = "gov-intel-workstation"
version = "2.0.0"
description = "GOV.UK Policy Intelligence Workstation"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "PyMuPDF>=1.23",
    "Pillow>=10.0",
]

[project.optional-dependencies]
docx = ["python-docx>=1.1"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
